# t_test_task

./: .dockerignore  Dockerfile  README.md  crm_db.db  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: main.py
app/api/: routers.py
app/api/v1/: routers.py
app/core/: config.py  db.py
app/models/: contact.py  lead.py  operator.py  source.py
app/repositories/: contact_repo.py  lead_repo.py  operator_repo.py  source_repo.py
app/schemas/: contact.py  lead.py  operator.py  source.py
